<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Invoice Contratistas</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="user">user</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="password_incorrect">Password incorrect. Please check this.</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_back">Welcome back</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="lost_your_password">Lost your password?</string>
    <string name="logo">logo</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_an_account">Create an account</string>
    <string name="name">Name</string>
    <string name="sing_up">Sing Up</string>
    <string name="i_agree_with_privacy_policy">I agree with privacy policy</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="login_now">Login now</string>
    <string name="let_s_get_started">Let´s get started</string>
    <string name="profile">profile</string>
    <string name="hi">Hi,</string>
    <string name="see_your_daily">See your daily</string>
    <string name="to_do">To do</string>
    <string name="quotation">Quotation</string>
    <string name="budget">Budget</string>
    <string name="receipt">Receipt</string>
    <string name="invoice">Invoice</string>
    <string name="calendar">calendar</string>
    <string name="finalize">Finalize</string>
    <string name="cancel">Cancel</string>
    <string name="step">Step</string>
    <string name="priority">Priority</string>
    <string name="low">Low</string>
    <string name="hour">Hour</string>
    <string name="add">add</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="event">Event</string>
    <string name="customer">Customer</string>
    <string name="save">Save</string>
    <string name="delete">delete</string>
    <string name="notes">Notes</string>
    <string name="new_event">New event</string>
    <string name="select_a_customer">Select a Customer</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="process">Process</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="title">Title</string>
    <string name="select_steps">Select steps</string>
    <string name="create_event">Create event</string>
    <string name="line">-</string>
    <string name="send_message">send message</string>
    <string name="send_email">send email</string>
    <string name="call_phone">call phone</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="go_to_selected">go to selected</string>
    <string name="navigate_to_previous">navigate to previous</string>
    <string name="navigate_to_next">navigate to next</string>
    <string name="more">more</string>
    <string name="add_customer">Add customer</string>
    <string name="enter_correspnding_data">Enter the corresponding data</string>
    <string name="legal_name">Legal name</string>
    <string name="customer_name">Customer name</string>
    <string name="tax_id">Tax id</string>
    <string name="tax_identification">Tax identification</string>
    <string name="tax">Tax</string>
    <string name="fiscal_regime">Fiscal regime</string>
    <string name="tax_system">Tax system</string>
    <string name="rfc_example">ABC101010111</string>
    <string name="street">Street</string>
    <string name="exterior">Exterior</string>
    <string name="interior">Interior</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="city">City</string>
    <string name="municipality">Municipality</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="tax_system_example">601</string>
    <string name="zip">Zip</string>
    <string name="create_budget">Create budget</string>
    <string name="part">Part</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="gain">Gain</string>
    <string name="sub_total">Sub total</string>
    <string name="total">Total</string>
    <string name="add_part">Add part</string>
    <string name="send_budget">Send budget</string>
    <string name="iva">IVA</string>
    <string name="product">Product</string>
    <string name="unit_price">Unit price</string>
    <string name="sub_total_price">Subtotal</string>
    <string name="units">Units</string>
    <string name="unit">Unit</string>
    <string name="money">Money</string>
    <string name="operator">Operator</string>
    <string name="total_expenses">Total expenses</string>
    <string name="percentage">Percentage</string>
    <string name="gain_unit">Gain for unit</string>
    <string name="total_gain">Total gain</string>
    <string name="price_for_unit_for_client">Final price</string>
    <string name="add_event">Add event</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="price_with_gain">Price with gain</string>
    <string name="price_with_discount">Price with discount</string>
    <string name="add_product">Add product</string>
    <string name="dis">--</string>
    <string name="multiplication">x</string>
    <string name="same">=</string>
    <string name="schedule">Schedule</string>
    <string name="add_note">Add note</string>
    <string name="add_schedule">Add schedule</string>
    <string name="event_name">Event name</string>
    <string name="note">Note</string>
    <string name="event_data">Event data</string>
    <string name="customer_data">Customer data</string>
    <string name="history">History</string>
    <string name="save_event">Save event</string>
    <string name="complete">Complete</string>
    <string name="select_date">Select date</string>
    <string name="select_hour">Select hour</string>
    <string name="required">Required</string>
    <string name="budgets">Budgets</string>
    <string name="add_budget">Add budget</string>
    <string name="ok">OK</string>
    <string name="local_tax">Local Tax</string>
    <string name="amount">Amount</string>
    <string name="apply_discount">Apply discount</string>
    <string name="zero">0</string>
    <string name="product_service">Product / Service</string>
    <string name="sku">SKU</string>
    <string name="empty_list">Empty list</string>
    <string name="category">Category</string>
    <string name="status">Status</string>
    <string name="available">Available</string>
    <string name="unexpected_error">Unexpected error.\nTry later.</string>
    <string name="please_check_email">Please check e-mail</string>

</resources>