<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="customer"
            type="com.invoice.contratista.data.source.local.entity.CustomerEntity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.customer.create.CreateCustomerFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16sp">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Subtitle1.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_customer" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_correspnding_data" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16sp"
                android:text="@string/customer_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_legal_name"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/legal_name"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_address_card">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:text="@{customer.legalName}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tax_identification" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_tax_identification"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rfc_example"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_address_card">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:text="@{customer.idTax}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fiscal_regime" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_tax_system"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tax_system_example"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_address_card">

                <AutoCompleteTextView
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@{customer.taxSystem}"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:text="@{customer.email}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_phone"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_phone">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"
                    android:text="@{customer.phone}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:layout_marginTop="8sp"
                app:drawableStartCompat="@drawable/ic_location"
                app:drawableTint="?android:attr/colorPrimary" />

            <include
                android:id="@+id/address"
                layout="@layout/layout_address" />

            <Button
                android:id="@+id/button_save"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save" />

        </LinearLayout>

    </ScrollView>
</layout>